--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply m-0 bg-background p-0 text-foreground;
   }
 }
