--- a/app/globals.css
+++ b/app/globals.css
@@ -6,17 +6,17 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
-    --skin: 223.81 0% 98%%;
+    --skin: 223.81 0% 96%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 223.81 0% 97%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
+    --muted-foreground: 0 0% 20.1%;
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
